# Vakt-Multi-Domain-AI-Governance-Platform-for-Financial-Services

./: .env.example  .gitignore  Makefile  ONE_PAGE_PROPOSAL.md  README.md  docker-compose.yml
.github/: CODEOWNERS  SECRETS.md  pull_request_template.md
.github/workflows/: ci-chat.yml  ci-document.yml  ci-evals.yml  ci-frontend.yml  ci-infra-scan.yml  ci-ingest.yml  ci-processing.yml  ci-python-service.yml  ci-search.yml  terraform.yml
data/: README.md
data/contracts/: contract_office_lease_oslo.txt  (+1 more)
docs/: FRONTEND_INSPIRATION.md  governance-platform-backlog.md
evals/infra/: cases.jsonl  (+1 more)
fixtures/: banking-transactions-sample.json  checkov-sample.json  terraform-plan-sample.json
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
images/: generate_architecture.py  generate_architecture_minimal.py  generate_charts.py
infra/: ai_search.tf  container_apps.tf  iam.tf  keyvault.tf  main.tf  openai.tf  outputs.tf  postgresql.tf  resource_group.tf  service_bus.tf  storage.tf  terraform.tfvars.example  variables.tf
k8s/: configmap.yaml  deployments.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  secrets-template.yaml
presentation/: SLIDES.md  TALKING_POINTS.md  allergo_nordic_presentation.tex
scripts/: import_checkov_findings.py
services/chat-service/: .env.example  Dockerfile  pyproject.toml
services/chat-service/src/chat_service/: __init__.py  __main__.py
services/chat-service/src/chat_service/application/: __init__.py  es_rag.py  langgraph_agent.py  rag.py  tools.py
services/chat-service/src/chat_service/infrastructure/: banking_db_reader.py  db_reader.py  observability.py
services/chat-service/src/chat_service/presentation/: __init__.py  api.py  config.py  dependencies.py
services/chat-service/src/chat_service/presentation/routes/: __init__.py  chat.py  saved_queries.py
services/document-service/: .env.example  Dockerfile  pyproject.toml
services/document-service/src/document_service/: __init__.py  __main__.py
services/document-service/src/document_service/domain/: infra_context.py
services/document-service/src/document_service/infrastructure/: __init__.py  audit.py
services/document-service/src/document_service/presentation/: __init__.py  api.py  config.py  dependencies.py
services/document-service/src/document_service/presentation/routes/: __init__.py  alerts.py  audit_api.py  documents.py  download.py  export.py  history.py  posture.py  posture_proposals.py  review.py  stats.py  tags.py  webhooks.py
services/document-service/tests/unit/: test_alert_rules.py  test_download.py  test_placeholder.py
services/ingest-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/ingest-service/src/ingest_service/: __init__.py  __main__.py
services/ingest-service/src/ingest_service/application/: __init__.py
services/ingest-service/src/ingest_service/application/use_cases/: __init__.py  email_config_service.py  ingest_email_attachments.py  upload_document.py
services/ingest-service/src/ingest_service/domain/: __init__.py
services/ingest-service/src/ingest_service/domain/interfaces/: __init__.py  document_repository.py
services/ingest-service/src/ingest_service/infrastructure/: __init__.py  config.py  email_filter.py  email_poller.py  email_poller_manager.py
services/ingest-service/src/ingest_service/infrastructure/db/: __init__.py  email_config_repository.py  repository.py
services/ingest-service/src/ingest_service/infrastructure/db/migrations/: 001_create_documents.sql  002_extraction_history.sql  003_webhooks.sql  004_extraction_indexes.sql  005_tags.sql  006_alerts.sql  007_saved_queries.sql  008_scheduled_alert_log.sql  009_email_ingest_log.sql  010_rls_policies.sql  011_email_ingest_configs.sql  012_posture_governance.sql  013_posture_seed_demo.sql  014_banking_compliance.sql
services/ingest-service/src/ingest_service/presentation/: __init__.py  api.py  dependencies.py  schemas.py
services/ingest-service/src/ingest_service/presentation/routes/: __init__.py  documents.py  email_config.py  reprocess.py
services/ingest-service/tests/: __init__.py
services/ingest-service/tests/unit/: __init__.py  test_upload_document.py
services/processing-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/processing-service/src/processing_service/: __init__.py  __main__.py
services/processing-service/src/processing_service/application/: __init__.py  contract_renewal_scanner.py  worker.py
services/processing-service/src/processing_service/infrastructure/: __init__.py  chunker.py  config.py  db_updater.py  email_notifier.py  es_indexer.py  llm_extractor.py  parser.py  search_indexer.py
services/processing-service/tests/unit/: test_parser.py  test_placeholder.py
services/search-service/: .env.example  Dockerfile  pyproject.toml
services/search-service/src/search_service/: __init__.py  __main__.py
services/search-service/src/search_service/application/: __init__.py  es_search.py  search.py
services/search-service/src/search_service/infrastructure/: __init__.py  config.py
services/search-service/src/search_service/presentation/: __init__.py  api.py  dependencies.py
services/search-service/src/search_service/presentation/routes/: __init__.py  search.py
services/search-service/tests/unit/: test_placeholder.py
services/shared-lib/: pyproject.toml
services/shared-lib/src/allergo_shared/: __init__.py
services/shared-lib/src/allergo_shared/domain/: __init__.py  email_config.py  entities.py  enums.py  exceptions.py  value_objects.py
services/shared-lib/src/allergo_shared/domain/interfaces/: __init__.py  email_config_repository.py  queue.py  storage.py
services/shared-lib/src/allergo_shared/infrastructure/: __init__.py  auth.py  health.py  logging.py  rate_limit.py
services/shared-lib/src/allergo_shared/infrastructure/azure/: __init__.py  blob.py  rabbitmq.py  service_bus.py
services/shared-lib/tests/: conftest.py
services/shared-lib/tests/unit/: test_blob_adapter.py  test_rabbitmq_adapter.py
(+69 files in other folders)
