[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allergo-chat-service"
version = "0.1.0"
description = "RAG chat service — retrieves relevant document chunks and answers via Azure OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "azure-identity>=1.15",
    "aiohttp>=3.9",
    "azure-search-documents>=11.6",
    "openai>=1.23",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "allergo-shared>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_service"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
