[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allergo-ingest-service"
version = "0.1.0"
description = "Document ingest API — upload, validate, store in Azure Blob, publish to Service Bus"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "azure-identity>=1.15",
    "aiohttp>=3.9",
    "azure-storage-blob>=12.19,<12.25",
    "azure-servicebus>=7.12",
    "asyncpg>=0.29",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "aio-pika>=9.4",
    "allergo-shared>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_service"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
