[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allergo-processing-service"
version = "0.1.0"
description = "Document processing worker — parse, OCR, AI extraction, Azure AI Search indexing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "azure-identity>=1.15",
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.12",
    "azure-search-documents>=11.6",
    "openai>=1.23",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pytesseract>=0.3.10",
    "Pillow>=10.3",
    "tiktoken>=0.7",
    "structlog>=24.1",
    "asyncpg>=0.29",
    "tenacity>=8.3",
    "allergo-shared>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/processing_service"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
