[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allergo-shared"
version = "0.1.0"
description = "Shared domain models, interfaces, and Azure clients for Allergo Nordic microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "azure-identity>=1.15",
    "azure-storage-blob>=12.19",
    "azure-servicebus>=7.12",
    "azure-search-documents>=11.6",
    "opentelemetry-api>=1.24",
    "structlog>=24.1",
    "aio-pika>=9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/allergo_shared"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
